Wrap up changes, fix data range outer weeks, discovered new problem with (01-01-2015 to 02-20-2015)

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -4,6 +4,7 @@
 }
 .chart{
   float: left;
+  margin-top:20px;
   .controls{margin-top:20px;}
 }
 
